--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "bs58": "^4.0.1",
     "ipfs-api": "^26.1.2",
+    "material-ui": "^0.20.2",
     "react": "16.11.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "16.11.0",
@@ -20,7 +21,7 @@
     "web3": "^1.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
